Cyberduck
https://cyberduck.io/

9.1.1
- [Bugfix] Repeated prompts for passphrase (Cryptomator, Windows) (#16645)
- [Bugfix] Missing list of buckets (Linode Object Storage) (#16659)
- [Bugfix] Enable encryption by default (SMB) (#16678)

9.1.0
- [Feature] Display transfer progress in Finder for downloads and uploads (macOS) (#16568)
- [Feature] Show indeterminate progress when concatenating segments after download transfer (#13610)
- [Feature] Show indeterminate progress when waiting for large file upload to complete (Backblaze B2, Box, OpenStack Swift, S3)
- [Bugfix] Multipart uploads fail to buckets with '.' character in name (S3) (#16401)
- [Bugfix] Usability improvements entering connection details (#15200)
- [Bugfix] Set "Show Hidden Files"shortcut to "⌘ ⇧ ." as in Finder (macOS) (#16459)
- [Bugfix] Do not require GroupMember.Read.All permission (Microsoft OneDrive, SharePoint) (#16564)
- [Bugfix] Do not require storage.buckets.list permission to access bucket (Google Storage) (#16565)
- [Bugfix] Test credentials using sts:GetCallerIdentity (AWS S3) (#16565)
- [Bugfix] Cannot exclude files in transfer prompt for existing files (macOS) (#16503)
- [Bugfix] Files not removed in vault when deleting folder (Cryptomator) (Box, Dropbox, Google Drive, OneDrive, WebDAV, SMB) (#14101)
- [Bugfix] Access files with double-byte character in key (S3) (#13407)
- [Bugfix] Failure uploading nested folders to vault (Cryptomator) (Azure, Backblaze B2, Google Storage, OpenStack Swift) (#15489)
- [Bugfix] Error copying files between vaults (Cryptomator) (#15422)

9.0.3
- [Bugfix] Registration key prompt in browser window regardless of registration (Windows) (#16326)

9.0.2
- [Feature] Support for Canada West (Calgary) region (S3) (#16215)
- [Feature] Support for Asia Pacific (Melbourne) region (S3)
- [Feature] Support for Israel (Tel Aviv) region (S3)
- [Feature] Support for Asia Pacific (Kuala Lumpur) region (S3)