@@ -96,6 +96,11 @@
     <li><span class="label label-warning">Bugfix</span> Enable encryption by default (SMB) (<a
             target="_blank" href="https://trac.cyberduck.io/ticket/16678">#16678</a>)
     </li>
+    <li><span class="label label-warning">Bugfix</span> Application fails to execute and exits with no error message
+        (CLI) (<a
+                target="_blank" href="https://trac.cyberduck.io/ticket/16683">#16683</a>)
+    </li>
+
 </ul>
 
 <p>
