@@ -5,6 +5,7 @@ https://cyberduck.io/
 - [Bugfix] Repeated prompts for passphrase (Cryptomator, Windows) (#16645)
 - [Bugfix] Missing list of buckets (Linode Object Storage) (#16659)
 - [Bugfix] Enable encryption by default (SMB) (#16678)
+- [Bugfix] Application fails to execute and exits with no error message (CLI) (#16683)
 
 9.1.0
 - [Feature] Display transfer progress in Finder for downloads and uploads (macOS) (#16568)
